# Trail-Buddy

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  rag_config.toml
evaluation/: PLAN.md  __init__.py  config.py  dataset.py  eval_config.toml  models.py  prompts.py  run.py
scripts/: smoke_new_contract.py
tests/: test_effort.py  test_evaluation.py  test_samples.py  test_weather.py  test_web_search.py
trail_buddy/: __init__.py  graph.py  llm.py  logging_config.py  nodes.py  prompts.py  state.py
trail_buddy/effort/: __init__.py  tools.py
trail_buddy/retrieval/: README.md  __init__.py  config.py  service.py
trail_buddy/weather/: __init__.py  config.py  service.py  tools.py
trail_buddy/web_search/: __init__.py  config.py  tools.py
