[project]
name = "trail-buddy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.13.0",
    "langchain-core>=1.3.2",
    "langchain-litellm>=0.6.4",
    "langgraph>=1.1.10",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
