[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trail-buddy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "gradio>=6.13.0",
    "httpx>=0.27.0",
    "langchain-chroma>=0.1.0",
    "langchain-core>=1.3.2",
    "langchain-huggingface>=0.1.0",
    "langchain-litellm>=0.6.4",
    "langchain-tavily>=0.1.0",
    "langgraph>=1.1.10",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["trail_buddy*", "evaluation*"]
